--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,21 @@
 /* This is our styling */
+
+#pac-input {
+  margin-top: 55px; 
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: -10px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 300px;
+}
+
+#pac-input:focus {
+  border-color: #4d90fe;
+}
+
+.pac-container {
+  font-family: Roboto;
+}
