--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,19 @@
 	font-family: Lato;
 }
 
-#logo-pic {
-	border-radius: 10px;
-	width: 10%;
-	height: auto;
+#text-big {
+	position: relative;
+    left: 60px;
+	color: green;
+	font-size: 150%;
+	font-family: Lato;
 }
+
+#text-small {
+	position: relative;
+    left: 60px;
+	color: green;
+	font-size: 70%;
+	font-family: Lato;
+}
+
